Fix map clipping on mobile

--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -8,12 +8,13 @@ body {
   margin: 0;
 }
 #map {
-  height: 100%;
+  height: calc(100vh - var(--bottom-bar-height));
 }
 
 @media screen and (min-width: 925px) {
   #map {
     width: 100%;
+    height: 100%;
     position: absolute;
   }
 }
